--- a/NLP/YT_Fine_tuning_BERT_NER_v1.ipynb
+++ b/NLP/YT_Fine_tuning_BERT_NER_v1.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -15,6 +16,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -69,6 +71,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "SGFDaV90_AJ5"
@@ -86,6 +89,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TT4r9bTC_AJ7"
@@ -99,6 +103,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dLQdJuDF_AJ8"
@@ -109,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -208,148 +213,7 @@
         "id": "KooHZMYXeymA",
         "outputId": "aaefe215-3f3c-4f37-e7b7-b423ffc36367"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Moving 0 files to the new cache system\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "0c552637da2a49da82744602210853bf",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "0c8a1daa31ee42c292b46d266cd8d1a3",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading builder script:   0%|          | 0.00/9.57k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2d7693cc60ce4e8099e1bf16765b505c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading metadata:   0%|          | 0.00/3.73k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading and preparing dataset conll2003/conll2003 (download: 959.94 KiB, generated: 9.78 MiB, post-processed: Unknown size, total: 10.72 MiB) to /root/.cache/huggingface/datasets/conll2003/conll2003/1.0.0/9a4d16a94f8674ba3466315300359b0acd891b68b6c8743ddf60b9c702adce98...\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "52eaac9cdca14c7b84effe1676aa2714",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading data:   0%|          | 0.00/983k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b8b9f1274ffc45a2a72ae297f6e9aa3e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating train split:   0%|          | 0/14041 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "813d0cd5d8ba432585096b59fe6fbe91",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating validation split:   0%|          | 0/3250 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "854e391b5b71453589499886d316561d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating test split:   0%|          | 0/3453 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Dataset conll2003 downloaded and prepared to /root/.cache/huggingface/datasets/conll2003/conll2003/1.0.0/9a4d16a94f8674ba3466315300359b0acd891b68b6c8743ddf60b9c702adce98. Subsequent calls will reuse this data.\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f89722812539451a8aac60f338bb7f7d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/3 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import datasets \n",
         "import numpy as np \n",
@@ -521,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -576,69 +440,13 @@
         "id": "vPdTN25De8qy",
         "outputId": "dbc85372-e4fb-49a7-a9bb-5f9bd93e0711"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "74b746595b93437192513bfdbc89b266",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "7595d12be20b495d8131648bfcfe2f5d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "35ed35e3d3c84362a98b9c61398617b8",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "365ad60f54934212a3fcad8daf812210",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "tokenizer = BertTokenizerFast.from_pretrained(\"bert-base-uncased\") "
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DWOeOxlP_AKA"
@@ -656,6 +464,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "r-W_ZVTG_AKB"
@@ -676,6 +485,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uasGvMFo_AKB"
@@ -730,6 +540,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gA-KLQ-D_AKC"
@@ -766,6 +577,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FsMWHr9r_AKD"
@@ -789,6 +601,22 @@
       "outputs": [],
       "source": [
         "def tokenize_and_align_labels(examples, label_all_tokens=True): \n",
+        "    \"\"\"\n",
+        "    Function to tokenize and align labels with respect to the tokens. This function is specifically designed for\n",
+        "    Named Entity Recognition (NER) tasks where alignment of the labels is necessary after tokenization.\n",
+        "\n",
+        "    Parameters:\n",
+        "    examples (dict): A dictionary containing the tokens and the corresponding NER tags.\n",
+        "                     - \"tokens\": list of words in a sentence.\n",
+        "                     - \"ner_tags\": list of corresponding entity tags for each word.\n",
+        "                     \n",
+        "    label_all_tokens (bool): A flag to indicate whether all tokens should have labels. \n",
+        "                             If False, only the first token of a word will have a label, \n",
+        "                             the other tokens (subwords) corresponding to the same word will be assigned -100.\n",
+        "\n",
+        "    Returns:\n",
+        "    tokenized_inputs (dict): A dictionary containing the tokenized inputs and the corresponding labels aligned with the tokens.\n",
+        "    \"\"\"\n",
         "    tokenized_inputs = tokenizer(examples[\"tokens\"], truncation=True, is_split_into_words=True) \n",
         "    labels = [] \n",
         "    for i, label in enumerate(examples[\"ner_tags\"]): \n",
@@ -847,6 +675,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "A08S1NJn_AKD"
@@ -1233,6 +1062,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2Px8K0rm_AKG"
@@ -1250,6 +1080,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-IZiTIn3_AKG"
@@ -1269,6 +1100,16 @@
       "outputs": [],
       "source": [
         "def compute_metrics(eval_preds): \n",
+        "    \"\"\"\n",
+        "    Function to compute the evaluation metrics for Named Entity Recognition (NER) tasks.\n",
+        "    The function computes precision, recall, F1 score and accuracy.\n",
+        "\n",
+        "    Parameters:\n",
+        "    eval_preds (tuple): A tuple containing the predicted logits and the true labels.\n",
+        "\n",
+        "    Returns:\n",
+        "    A dictionary containing the precision, recall, F1 score and accuracy.\n",
+        "    \"\"\"\n",
         "    pred_logits, labels = eval_preds \n",
         "    \n",
         "    pred_logits = np.argmax(pred_logits, axis=2) \n",
@@ -1295,6 +1136,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ZieP-5MU_AKG"
