--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -56,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -601,6 +604,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -763,6 +767,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1228,6 +1233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1250,9 +1256,19 @@
     "from transformers.models.roberta.modeling_roberta import RobertaPreTrainedModel\n",
     "\n",
     "class XLMRobertaForTokenClassification(RobertaPreTrainedModel):\n",
+    "    \"\"\"\n",
+    "    This class extends the RobertaPreTrainedModel class for token classification tasks.\n",
+    "    The model architecture is based on the XLMRoberta model.\n",
+    "    \"\"\"\n",
     "    config_class = XLMRobertaConfig\n",
     "\n",
     "    def __init__(self, config):\n",
+    "        \"\"\"\n",
+    "        Constructor for the XLMRobertaForTokenClassification class.\n",
+    "        \n",
+    "        Parameters:\n",
+    "        config (XLMRobertaConfig): Configuration object containing information about how to build the model.\n",
+    "        \"\"\"\n",
     "        super().__init__(config)\n",
     "        self.num_labels = config.num_labels\n",
     "        # Load model body\n",
@@ -1265,6 +1281,18 @@
     "\n",
     "    def forward(self, input_ids=None, attention_mask=None, token_type_ids=None, \n",
     "                labels=None, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Forward method for the XLMRobertaForTokenClassification class.\n",
+    "        \n",
+    "        Parameters:\n",
+    "        input_ids (torch.Tensor): Tensor of input ids of shape (batch_size, sequence_length).\n",
+    "        attention_mask (torch.Tensor): Tensor of attention masks of shape (batch_size, sequence_length).\n",
+    "        token_type_ids (torch.Tensor): Tensor of token type ids of shape (batch_size, sequence_length).\n",
+    "        labels (torch.Tensor): Tensor of labels of shape (batch_size, sequence_length).\n",
+    "        \n",
+    "        Returns:\n",
+    "        TokenClassifierOutput: An object that contains the loss and the logits.\n",
+    "        \"\"\"\n",
     "        # Use model body to get encoder representations\n",
     "        outputs = self.roberta(input_ids, attention_mask=attention_mask,\n",
     "                               token_type_ids=token_type_ids, **kwargs)\n",
@@ -1283,6 +1311,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1732,6 +1761,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1945,6 +1975,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2487,6 +2518,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2532,6 +2564,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2656,6 +2689,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2866,6 +2900,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4054,6 +4089,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5046,6 +5082,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6848,6 +6885,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
