--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -1525,29 +1525,44 @@
    "outputs": [],
    "source": [
     "def tag_text(text, tags, model, tokenizer):\n",
-    "    # Get tokens with special characters\n",
+    "    \"\"\"\n",
+    "    Function to tag text using a pretrained model and tokenizer.\n",
+    "\n",
+    "    Parameters:\n",
+    "    text (str): Text to be tagged.\n",
+    "    tags (Tags): An instance of the Tags class that maps class indices to names.\n",
+    "    model (Model): Pretrained model for named entity recognition.\n",
+    "    tokenizer (Tokenizer): Pretrained tokenizer corresponding to the model.\n",
+    "\n",
+    "    Returns:\n",
+    "    pd.DataFrame: DataFrame containing the original tokens and their corresponding tags.\n",
+    "    \"\"\"\n",
+    "    # Tokenize the text, preserving special characters\n",
     "    tokens = tokenizer(text).tokens()\n",
-    "    \n",
-    "    # Encode the sequence into IDs\n",
-    "    input_ids = xlmr_tokenizer(text, return_tensors=\"pt\").input_ids.to(device)\n",
+    "\n",
+    "    # Encode the tokens into their corresponding IDs\n",
+    "    # 'return_tensors=\"pt\"' indicates that we want PyTorch tensors\n",
+    "    # '.to(device)' sends the tensors to the GPU if one is available\n",
+    "    input_ids = tokenizer(text, return_tensors=\"pt\").input_ids.to(device)\n",
+    "\n",
+    "    # Print the input IDs for debugging purposes\n",
     "    print('input_ids ', input_ids)\n",
-    "    # input_ids are token indices; they are the numerical representations of tokens;\n",
-    "    # a list of these representations is called sequences used as input by the model\n",
-    "    \n",
-    "    # Get predictions as distribution over 7 possible classes / NER tags\n",
+    "\n",
+    "    # Get the model's predictions as a distribution over possible classes\n",
+    "    # Each token is associated with a probability distribution over the 7 possible NER tags\n",
     "    outputs = model(input_ids)[0]\n",
     "    print(f\"Shape of outputs: {outputs.shape}\")\n",
-    "    # the outputs logits have the shape [batch_size, num_tokens, num_tags], \n",
-    "    # with each token given a logit among the seven possible NER tags. \n",
-    "    \n",
-    "    # Take argmax to get most likely class per token\n",
+    "\n",
+    "    # Take the argmax over the tag dimension to get the most likely class for each token\n",
     "    predictions = torch.argmax(outputs, dim=2)\n",
     "    print('predictions ', predictions)\n",
-    "    \n",
-    "    # Convert to DataFrame\n",
+    "\n",
+    "    # Convert the predictions from class indices to class names using the 'tags' object\n",
+    "    # '.cpu().numpy()' moves the tensor from GPU to CPU and converts it to a NumPy array\n",
     "    preds = [tags.names[p] for p in predictions[0].cpu().numpy()]\n",
-    "    return pd.DataFrame([tokens, preds], index=[\"Tokens\", \"Tags\"])\n",
-    "    "
+    "\n",
+    "    # Return the tokens and their corresponding tags as a DataFrame\n",
+    "    return pd.DataFrame([tokens, preds], index=[\"Tokens\", \"Tags\"])\n"
    ]
   },
   {
