--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -2554,6 +2554,18 @@
    "outputs": [],
    "source": [
     "def tokenize_mask_modify_labels(examples):\n",
+    "    \"\"\"\n",
+    "    Function to tokenize the input text, mask certain tokens, and adjust the labels accordingly.\n",
+    "\n",
+    "    Parameters:\n",
+    "    examples (dict): A dictionary containing the input text and labels. The input text (\"tokens\") is a list of words, \n",
+    "                     and the labels (\"ner_tags\") are a corresponding list of NER tags.\n",
+    "\n",
+    "    Returns:\n",
+    "    tokenized_inputs (dict): A dictionary containing the tokenized input text and modified labels. The tokenized input \n",
+    "                             text is a list of token IDs, and the modified labels are a corresponding list of NER tags, \n",
+    "                             with -100 indicating masked tokens.\n",
+    "    \"\"\"\n",
     "    tokenized_inputs = xlmr_tokenizer(examples[\"tokens\"], truncation=True, \n",
     "                                      is_split_into_words=True)\n",
     "    labels = []\n",
@@ -2796,23 +2808,38 @@
     "import numpy as np\n",
     "\n",
     "def generate_list_for_compute_metrics(predictions, label_ids):\n",
+    "    \"\"\"\n",
+    "    Function to generate prediction and true labels lists for computing metrics.\n",
+    "\n",
+    "    Parameters:\n",
+    "    predictions (np.ndarray): A 2D numpy array containing the predicted label IDs for each token in each example.\n",
+    "    label_ids (np.ndarray): A 2D numpy array containing the true label IDs for each token in each example.\n",
+    "\n",
+    "    Returns:\n",
+    "    preds_labels_list (list): A list of lists, where each sublist contains the predicted labels for each token in an example.\n",
+    "    true_labels_list (list): A list of lists, where each sublist contains the true labels for each token in an example.\n",
+    "    \"\"\"\n",
+    "    # Get the predicted labels by taking the argmax over the second dimension of the predictions array\n",
     "    preds = np.argmax(predictions, axis=2)\n",
     "    batch_size, seq_len = preds.shape\n",
     "    preds_labels_list, true_labels_list = [], []\n",
     "\n",
+    "    # Iterate over each example in the batch\n",
     "    for batch_idx in range(batch_size):\n",
     "        example_labels, example_preds = [], []\n",
+    "        # Iterate over each token in the example\n",
     "        for seq_idx in range(seq_len):\n",
-    "            # Ignore label IDs = -100\n",
+    "            # Ignore tokens with label ID = -100 (these are special tokens or subwords that we masked during training)\n",
     "            if label_ids[batch_idx, seq_idx] != -100:\n",
+    "                # Append the predicted and true labels for the token to the lists for the current example\n",
     "                example_preds.append(index2tag[preds[batch_idx][seq_idx]])\n",
     "                example_labels.append(index2tag[label_ids[batch_idx][seq_idx]])\n",
-    "\n",
+    "        # Append the lists for the current example to the main lists\n",
     "        preds_labels_list.append(example_preds)\n",
     "        true_labels_list.append(example_labels)\n",
     "\n",
-    "    # return y_pred, y_true\n",
-    "    return preds_labels_list, true_labels_list"
+    "    # Return the lists of predicted and true labels\n",
+    "    return preds_labels_list, true_labels_list\n"
    ]
   },
   {
