--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -3817,6 +3817,15 @@
     "from torch.nn.functional import cross_entropy\n",
     "\n",
     "def get_forward_loss_and_label(batch):\n",
+    "    \"\"\"\n",
+    "    Function to compute the loss and the predicted label for a given batch.\n",
+    "\n",
+    "    Parameters:\n",
+    "    batch (dict): A batch of input data, containing the input_ids, attention_mask, and labels.\n",
+    "\n",
+    "    Returns:\n",
+    "    results (dict): A dictionary containing the loss and predicted labels.\n",
+    "    \"\"\"\n",
     "    # Convert dict of lists to list of dicts suitable for data collator\n",
     "    features = [dict(zip(batch, t)) for t in zip(*batch.values())]\n",
     "    # Pad inputs and labels and put all tensors on device\n",
