--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -5149,21 +5149,43 @@
    "outputs": [],
    "source": [
     "def fine_tuning_training_on_single_corpus(dataset, num_samples):\n",
+    "    \"\"\"\n",
+    "    Function to train the model on a single corpus of data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    dataset (DatasetDict): The dataset to train on. It should be a HuggingFace DatasetDict containing 'train', 'validation' and 'test' splits.\n",
+    "    num_samples (int): The number of samples from the training set to use for training.\n",
+    "\n",
+    "    Returns:\n",
+    "    results (pd.DataFrame): A pandas DataFrame containing the number of training samples used and the F1 score on the test set.\n",
+    "    \"\"\"\n",
+    "    # Shuffle the training data and select the first 'num_samples' examples.\n",
     "    train_ds = dataset[\"train\"].shuffle(seed=42).select(range(num_samples))\n",
+    "    # The validation and test sets are not shuffled or truncated.\n",
     "    valid_ds = dataset[\"validation\"]\n",
     "    test_ds = dataset[\"test\"]\n",
+    "\n",
+    "    # Update the logging steps in the training arguments to log progress after each batch.\n",
     "    training_args.logging_steps = len(train_ds) // batch_size\n",
-    "    \n",
+    "\n",
+    "    # Initialize a Trainer instance. This is a HuggingFace class that handles training.\n",
     "    trainer = Trainer(model_init=model_init, args=training_args,\n",
     "        data_collator=data_collator, compute_metrics=compute_metrics,\n",
     "        train_dataset=train_ds, eval_dataset=valid_ds, tokenizer=xlmr_tokenizer)\n",
+    "    \n",
+    "    # Train the model.\n",
     "    trainer.train()\n",
+    "\n",
+    "    # If the training arguments specify to push the model to the HuggingFace model hub, do so with a commit message.\n",
     "    if training_args.push_to_hub:\n",
     "        trainer.push_to_hub(commit_message=\"Training completed!\")\n",
     "    \n",
+    "    # After training, compute the F1 score on the test set.\n",
     "    f1_score = get_f1_score(trainer, test_ds)\n",
+    "\n",
+    "    # Return the results as a pandas DataFrame.\n",
     "    return pd.DataFrame.from_dict(\n",
-    "        {\"num_samples\": [len(train_ds)], \"f1_score\": [f1_score]})"
+    "        {\"num_samples\": [len(train_ds)], \"f1_score\": [f1_score]})\n"
    ]
   },
   {
