--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -6081,12 +6081,31 @@
     "from datasets import concatenate_datasets\n",
     "\n",
     "def concatenate_splits(corpora):\n",
-    "    # corpora will be list of encoded datasets\n",
+    "    \"\"\"\n",
+    "    Function to concatenate multiple corpora together, and shuffle the result.\n",
+    "\n",
+    "    Parameters:\n",
+    "    corpora (list): A list of corpora, where each corpus is an instance of DatasetDict from the HuggingFace `datasets` library.\n",
+    "                     Each DatasetDict should contain the same train/validation/test splits.\n",
+    "\n",
+    "    Returns:\n",
+    "    multi_corpus (DatasetDict): A DatasetDict containing the concatenated and shuffled datasets.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Initialize an empty DatasetDict to hold the concatenated datasets.\n",
     "    multi_corpus = DatasetDict()\n",
+    "\n",
+    "    # For each split (train, validation, test) in the first corpus in the list...\n",
     "    for train_val_test_split in corpora[0].keys():\n",
+    "\n",
+    "        # Concatenate the corresponding split from all corpora in the list.\n",
+    "        # The `concatenate_datasets` function from HuggingFace `datasets` is used here.\n",
+    "        # The concatenated dataset is then shuffled with a fixed seed for reproducibility.\n",
     "        multi_corpus[train_val_test_split] = concatenate_datasets(\n",
     "            [corpus[train_val_test_split] for corpus in corpora]).shuffle(seed=42)\n",
-    "    return multi_corpus"
+    "\n",
+    "    # Return the concatenated and shuffled DatasetDict.\n",
+    "    return multi_corpus\n"
    ]
   },
   {
