--- a/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
+++ b/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
@@ -5,7 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polynomial Regression From Scratch\n",
+    "<a href=\"https://www.youtube.com/watch?v=7j5sh5CUr1Y&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=43&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Polynomial Regression From Scratch </b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/wvOy7IQ.png)](https://www.youtube.com/watch?v=7j5sh5CUr1Y&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=43&ab_channel=Rohan-Paul-AI)\n",
+    "\n",
+    "----------------\n",
+    "\n",
+    "\n",
     "\n",
     "Polynomial regression is a type of regression analysis in machine learning that models the relationship between the independent variable (input) and the dependent variable (output) as a polynomial function. It extends the concept of linear regression by introducing higher-order terms of the independent variable.\n",
     "\n",
