--- a/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
+++ b/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
@@ -427,9 +427,10 @@
    "outputs": [],
    "source": [
     "def r2_score(y, y_hat):\n",
-    "    \"\"\" - SSE (Explained Sum of Squares) is the sum of the squared differences between the predicted values and the mean of the dependent variable.\n",
+    "    \"\"\" \n",
+    "    SSE (Explained Sum of Squares) is the sum of the squared differences between the predicted values and the mean of the dependent variable.\n",
     "\n",
-    "    - TSS (Total Sum of Squares) is the sum of the squared differences between the actual values and the mean of the dependent variable. \n",
+    "    TSS (Total Sum of Squares) is the sum of the squared differences between the actual values and the mean of the dependent variable. \n",
     "    \n",
     "    R² = 1 - (SSE / TSS)\n",
     "    \n",
