--- a/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
+++ b/ML_Algos_From_Scratch/Polynomial_Regression_from_scratch.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.youtube.com/watch?v=7j5sh5CUr1Y&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=43&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Polynomial Regression From Scratch </b></h1></a>\n",
+    "<a href=\"https://www.youtube.com/watch?v=sXYUhT1SflI&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=21&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Polynomial Regression From Scratch </b></h1></a>\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/wvOy7IQ.png)](https://www.youtube.com/watch?v=7j5sh5CUr1Y&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=43&ab_channel=Rohan-Paul-AI)\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/wvOy7IQ.png)](https://www.youtube.com/watch?v=sXYUhT1SflI&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=21&ab_channel=Rohan-Paul-AI)\n",
     "\n",
     "----------------\n",
     "\n",
