--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -2894,6 +2894,16 @@
     "https://huggingface.co/transformers/v4.2.2/main_classes/trainer.html#id1\n",
     "'''\n",
     "def compute_metrics(eval_pred: EvalPrediction):\n",
+    "    \"\"\"\n",
+    "    Computes the F1 score metric for the model evaluation.\n",
+    "\n",
+    "    Args:\n",
+    "        eval_pred (EvalPrediction): Object containing the model predictions and labels.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary containing the computed F1 score.\n",
+    "\n",
+    "    \"\"\"\n",
     "    # print('eval_pred ', eval_pred)\n",
     "    print('eval_pred.predictions ', eval_pred.predictions)\n",
     "    # Output =>  <transformers.trainer_utils.EvalPrediction object\n",
