--- a/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
+++ b/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -158,6 +159,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -269,6 +271,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -325,6 +328,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -363,6 +367,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -471,6 +476,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -561,6 +567,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -592,6 +599,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -613,6 +621,17 @@
       "outputs": [],
       "source": [
         "def key_points_matching(features_train_img, features_query_img, method):\n",
+        "    \"\"\"\n",
+        "    Perform key points matching between the features of a train image and a query image using a specified method.\n",
+        "\n",
+        "    Parameters:\n",
+        "    features_train_img (np.ndarray): Features of the train image.\n",
+        "    features_query_img (np.ndarray): Features of the query image.\n",
+        "    method (str): Method to use for matching.\n",
+        "\n",
+        "    Returns:\n",
+        "    rawMatches (list): List of raw matches between the train and query images.\n",
+        "    \"\"\"\n",
         "    bf = create_matching_object(method, crossCheck=True)\n",
         "        \n",
         "    # Match descriptors.\n",
@@ -626,6 +645,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -661,6 +681,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -754,6 +775,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -815,6 +837,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -945,6 +968,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -996,6 +1020,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
