--- a/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
+++ b/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
@@ -665,6 +665,18 @@
       "outputs": [],
       "source": [
         "def key_points_matching_KNN(features_train_img, features_query_img, ratio, method):\n",
+        "    \"\"\"\n",
+        "    Perform key points matching using K-Nearest Neighbors (KNN) algorithm.\n",
+        "\n",
+        "    Args:\n",
+        "        features_train_img (list): List of features from the training image.\n",
+        "        features_query_img (list): List of features from the query image.\n",
+        "        ratio (float): Ratio threshold for Lowe's ratio test.\n",
+        "        method (string): Method for creating the matching object.\n",
+        "\n",
+        "    Returns:\n",
+        "        list: List of matches between key points in the training and query images.\n",
+        "    \"\"\"\n",
         "    bf = create_matching_object(method, crossCheck=False)\n",
         "    # compute the raw matches and initialize the list of actual matches\n",
         "    rawMatches = bf.knnMatch(features_train_img, features_query_img, k=2)\n",
