--- a/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
+++ b/OpenCV_Image_Processing/Image Stitching and Creating Image Panorama with OpenCV/Image_Stiching_and_Creating_Panorama_OpenCV.ipynb
@@ -957,10 +957,30 @@
       },
       "outputs": [],
       "source": [
-        "def homography_stitching(keypoints_train_img, keypoints_query_img, matches, reprojThresh):\n",
-        "    \"\"\" converting the keypoints to numpy arrays before passing them for calculating Homography Matrix.\n",
+        "def homography_stitching(keypoints_train_img, keypoints_query_img, matches, reprojThresh):   \n",
+        "    \"\"\" \n",
+        "    \n",
+        "    Perform homography stitching by calculating the homography matrix.\n",
+        "    converting the keypoints to numpy arrays before passing them for calculating Homography Matrix.\n",
         "    \n",
         "    Because we are supposed to pass 2 arrays of coordinates to cv2.findHomography, as in I have these points in image-1, and I have points in image-2, so now what is the homography matrix to transform the points from image 1 to image 2\n",
+        "\n",
+        "    Args:\n",
+        "        keypoints_train_img (list): List of keypoints from the training image.\n",
+        "        keypoints_query_img (list): List of keypoints from the query image.\n",
+        "        matches (list): List of matches between key points in the training and query images.\n",
+        "        reprojThresh (float): Reprojection threshold for the RANSAC algorithm.\n",
+        "\n",
+        "    Returns:\n",
+        "        tuple: Tuple containing the matches, homography matrix, and status.\n",
+        "               - matches (list): List of matches between key points in the training and query images.\n",
+        "               - H (numpy.ndarray): Homography matrix.\n",
+        "               - status (numpy.ndarray): Status of inlier points.\n",
+        "\n",
+        "    Note:\n",
+        "        The minimum number of matches required for calculating the homography is 4.\n",
+        "    \n",
+        "    \n",
         "    \"\"\"\n",
         "    keypoints_train_img = np.float32([keypoint.pt for keypoint in keypoints_train_img])\n",
         "    keypoints_query_img = np.float32([keypoint.pt for keypoint in keypoints_query_img])\n",
