--- a/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
+++ b/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,6 +28,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,6 +53,28 @@
    "outputs": [],
    "source": [
     "class LabelSmoothingLoss(torch.nn.Module):\n",
+    "    \"\"\"\n",
+    "    Label smoothing loss implementation.\n",
+    "\n",
+    "    Args:\n",
+    "        epsilon (float): Smoothing factor.\n",
+    "        reduction (str): Type of reduction to apply to the loss ('mean', 'sum', or 'none').\n",
+    "        weight (torch.Tensor, optional): Weight tensor for the loss.\n",
+    "\n",
+    "    Attributes:\n",
+    "        epsilon (float): Smoothing factor.\n",
+    "        reduction (str): Type of reduction to apply to the loss ('mean', 'sum', or 'none').\n",
+    "        weight (torch.Tensor or None): Weight tensor for the loss.\n",
+    "\n",
+    "    Note:\n",
+    "        This implementation assumes the input `predict_tensor` is log probabilities.\n",
+    "\n",
+    "    References:\n",
+    "        - Szegedy, C., Vanhoucke, V., Ioffe, S., Shlens, J., & Wojna, Z. (2016).\n",
+    "          Rethinking the inception architecture for computer vision. In Proceedings\n",
+    "          of the IEEE conference on computer vision and pattern recognition (pp. 2818-2826).\n",
+    "\n",
+    "    \"\"\"\n",
     "    def __init__(self, epsilon: float = 0.1, \n",
     "                 reduction=\"mean\", weight=None):\n",
     "        super(LabelSmoothingLoss, self).__init__()\n",
@@ -111,6 +135,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
