--- a/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
+++ b/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
@@ -83,13 +83,45 @@
     "        self.weight    = weight\n",
     "\n",
     "    def reduce_loss(self, loss):\n",
+    "        \"\"\"\n",
+    "        Reduce the loss tensor based on the specified reduction type.\n",
+    "\n",
+    "        Args:\n",
+    "            loss (torch.Tensor): Loss tensor to be reduced.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: Reduced loss tensor.\n",
+    "\n",
+    "        \"\"\"\n",
     "        return loss.mean() if self.reduction == 'mean' else loss.sum() \\\n",
     "         if self.reduction == 'sum' else loss\n",
     "\n",
     "    def linear_combination(self, i, j):\n",
+    "        \"\"\"\n",
+    "        Perform a linear combination of two tensors.\n",
+    "\n",
+    "        Args:\n",
+    "            i (torch.Tensor): First tensor.\n",
+    "            j (torch.Tensor): Second tensor.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: Linear combination of the two tensors.\n",
+    "\n",
+    "        \"\"\"\n",
     "        return (1 - self.epsilon) * i + self.epsilon * j\n",
     "\n",
     "    def forward(self, predict_tensor, target):\n",
+    "        \"\"\"\n",
+    "        Forward pass of the label smoothing loss.\n",
+    "\n",
+    "        Args:\n",
+    "            predict_tensor (torch.Tensor): Predicted tensor from the model.\n",
+    "            target (torch.Tensor): Target tensor.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: Loss value.\n",
+    "\n",
+    "        \"\"\"\n",
     "        assert 0 <= self.epsilon < 1\n",
     "\n",
     "        if self.weight is not None:\n",
