--- a/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
+++ b/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Lasso Regression From Scratch\n",
     "\n",
+    "## [You can download the csv file from here](https://github.com/rohan-paul/YT_Data_Sources/blob/main/Lasso%20Regression%20from%20Scratch/data.csv)\n",
+    "\n",
     "Lasso Regression is also another linear model derived from Linear Regression which shares the same hypothetical function for prediction. So in Simple Linear Regression the objective function (also called the cost) to be minimized is just the RSS (Residual Sum of Squares), i.e., the sum of squared errors of the predicted outcome as compared to the actual outcome. This can be depicted mathematically as:\n",
     "\n",
     "![](assets/2023-05-19-01-34-23.png)\n",
